manifests/03_INGRESSROUTE/002_console.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/managed-by: tmax-cloud
    app.kubernetes.io/name: api-gateway
  name: console-ingressroute
  namespace: api-gateway-system
spec:
  entryPoints:
    - websecure
  #  - web
  routes:
    - kind: Rule
      match: PathPrefix(`/`, `/static/`, `/api/resource/`, `/api/console/`) && Host(`console.@@DNS@@`)
      services:
        - name: console-service@file
          kind: TraefikService
#  tls: {} # use default tls
#  tls:
#    secretName: api-gateway-server-tls
